# Homelab2

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  Taskfile.yml  install.sh  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: phase-workstream.yml
.github/scripts/: installer-smoke.sh
.github/workflows/: quality.yml
ansible/: baseline.yml
ansible/applications/: UPSTREAM.md  technitium.yml  uptime-kuma.yml
config/examples/: dns-core-site.yaml  future-state.yaml  mikrotik-desired.yaml  site.yaml
config/schema/: future-state.schema.json  site.schema.json
config/secrets/: .gitkeep
docs/: APPLICATIONS.md  CLEAN_REBUILD_PLAN.md  CLOUDFLARE_DNS.md  CONTROL_PANEL.md  DNS_MIGRATION.md  EXISTING_HOMELAB_DISCOVERY.md  FUTURE_STATE.md  HOMELAB_ARCHITECTURE.md  MIKROTIK_DESIRED_STATE.md  MIKROTIK_EXISTING_CONFIGURATION_AUDIT.md  OPENTOFU_STATE.md  PHASE_6_EXECUTION_PLAN.md  PHASE_6_SAFETY.md  PROXMOX_BOOTSTRAP.md  PROXMOX_PROVISIONING.md  ROADMAP.md  SECRETS.md
infrastructure/: .terraform.lock.hcl  backend.production.hcl.example  backend.production.tf.example  cloudflare_dns.tf  example.tfvars.json  outputs.tf  providers.tf  proxmox_lxc.tf  variables.tf  versions.tf
other_scripts/discovery/: collect-existing-homelab.ps1
other_scripts/repo_installer/: README.md  repo-installer.sh
src/homelabctl/: __init__.py  __main__.py  ansible.py  ansible_setup.py  applications.py  automation_ssh.py  cli.py  configuration.py  (+15 more)
tests/: test_ansible.py  test_ansible_setup.py  test_applications.py  test_automation_ssh.py  test_cli.py  test_configuration.py  test_discovery.py  test_dns.py  test_doctor.py  test_guard.py  test_manifest.py  test_mikrotik.py  test_models.py  test_playbooks.py  test_proxmox_bootstrap.py  test_safety.py  test_secrets.py  test_tofu.py  test_ui.py  test_updater.py
