[build-system]
requires = ["hatchling>=1.31.0,<2"]
build-backend = "hatchling.build"

[project]
name = "homelab-control"
version = "0.4.0"
description = "A reusable control plane for Proxmox homelab deployments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Homelab2 contributors" }]
dependencies = [
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
  "textual==8.2.8",
]

[project.scripts]
homelabctl = "homelabctl.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.15.22,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/homelabctl"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
